Conditionals fixes
- Restore updated symbols font file for Condition Widget icon glyph;
- Change "All telemetry | Any telemetry" to all lowercase;
- Fix cursor styles for Condition Widget;
- Fix Safari layout problems with Condition Set/section styles;

--- a/src/plugins/conditionWidget/components/condition-widget.scss
+++ b/src/plugins/conditionWidget/components/condition-widget.scss
@@ -28,6 +28,10 @@
     border: 1px solid transparent;
     display: inline-block;
     padding: $interiorMarginLg $interiorMarginLg * 2;
+    cursor: inherit !important;
+    &[href] {
+        cursor: pointer !important;
+    }
 }
 
 // Make Condition Widget expand when in a hidden frame Layout context
